animate.hoer.css added and new images

--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 
 <!-- Mirrored from slimhamdi.net/tunis/dark/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 19 May 2020 09:42:26 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>Blog - Tunis Personal Portfolio</title>
+    <title>Certificat Personal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Template Google Fonts -->
@@ -141,8 +141,8 @@
 <!-- Header Ends -->
 <!-- Page Title Starts -->
 <section class="title-section text-left text-sm-center revealator-slideup revealator-once revealator-delay1">
-    <h1>my <span>blog</span></h1>
-    <span class="title-bg">posts</span>
+    <h1>mes <span>certifications</span></h1>
+    <span class="title-bg">Learning</span>
 </section>
 <!-- Page Title Ends -->
 <!-- Main Content Starts -->
